--- a/Breast_Cancer_Analysis.Rmd
+++ b/Breast_Cancer_Analysis.Rmd
@@ -9,22 +9,40 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r import packages, include = FALSE}
+library(dplyr)
+library(bayesplot)
+library(janitor)
+library(rstan)
+library(rstanarm)
 ```
 
-## Including Plots
+The bayesian analysis will focus on the Wisconsin Breast Cancer Dataset. This dataset has 568 records of health data from the UCI Machine Learning Repository. There are 568 rows and 32 features. Of the features, this analysis will focus on the diagnosis as one of the target features as a binary variable and then it will focus on the [insert random feature] as the regression target variable. 
 
-You can also embed plots, for example:
+The dataset originally is used for classification of breast cancer using the different features present in the dataset. While we will be analyzing this, we will also be conducting bayesian regression analysis and utilizing MCMC Methods to simulate the posterior distribution of a continuous variable. 
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r import data}
+
+breast_cancer_data <- read.csv("data/wisconsin_breast_cancer.csv")
+
+#convert diagnosis to binary numbers
+breast_cancer_data$diagnosis <- ifelse(breast_cancer_data$diagnosis == "M" , 1, 0)
+
+
+head(breast_cancer_data)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+dim(breast_cancer_data)
+```
+
+```{r}
+summary(breast_cancer_data)
+```
+
+#####Part 1: Exploratory Data Analysis to Determine Priors for our Regression Analaysis
+
+The continuous variable that will be studied for regression predictions is radius1 and the binary variable is going to be diagnosis. 
+```{r}
+
+```
